--- a/Extracting URLs from CMR response.ipynb
+++ b/Extracting URLs from CMR response.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -31,6 +31,7 @@
        "      <th>orbit</th>\n",
        "      <th>scene</th>\n",
        "      <th>tile</th>\n",
+       "      <th>type</th>\n",
        "      <th>granule</th>\n",
        "      <th>filename</th>\n",
        "      <th>URL</th>\n",
@@ -44,6 +45,7 @@
        "      <td>35510</td>\n",
        "      <td>5</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -55,6 +57,7 @@
        "      <td>35510</td>\n",
        "      <td>5</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -66,6 +69,7 @@
        "      <td>35510</td>\n",
        "      <td>5</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -77,6 +81,7 @@
        "      <td>35510</td>\n",
        "      <td>5</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -88,12 +93,14 @@
        "      <td>35510</td>\n",
        "      <td>5</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -110,6 +117,7 @@
        "      <td>35820</td>\n",
        "      <td>12</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -121,6 +129,7 @@
        "      <td>35820</td>\n",
        "      <td>12</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -132,6 +141,7 @@
        "      <td>35820</td>\n",
        "      <td>12</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -143,6 +153,7 @@
        "      <td>35820</td>\n",
        "      <td>12</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
@@ -154,28 +165,29 @@
        "      <td>35820</td>\n",
        "      <td>12</td>\n",
        "      <td>11SMT</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>ECOv002_L3T_JET_35820_012_11SMT_20241030T15184...</td>\n",
        "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>518 rows × 8 columns</p>\n",
+       "<p>518 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     product             variable  orbit  scene   tile  \\\n",
-       "0    L3T_JET             STICinst  35510      5  11SMT   \n",
-       "1    L3T_JET                cloud  35510      5  11SMT   \n",
-       "2    L3T_JET          PTJPLSMinst  35510      5  11SMT   \n",
-       "3    L3T_JET             BESSinst  35510      5  11SMT   \n",
-       "4    L3T_JET            MOD16inst  35510      5  11SMT   \n",
-       "..       ...                  ...    ...    ...    ...   \n",
-       "513  L3T_JET                water  35820     12  11SMT   \n",
-       "514  L3T_JET        PTJPLSMcanopy  35820     12  11SMT   \n",
-       "515  L3T_JET           STICcanopy  35820     12  11SMT   \n",
-       "516  L3T_JET          PTJPLSMsoil  35820     12  11SMT   \n",
-       "517  L3T_JET  PTJPLSMinterception  35820     12  11SMT   \n",
+       "     product             variable  orbit  scene   tile             type  \\\n",
+       "0    L3T_JET             STICinst  35510      5  11SMT     GeoTIFF Data   \n",
+       "1    L3T_JET                cloud  35510      5  11SMT     GeoTIFF Data   \n",
+       "2    L3T_JET          PTJPLSMinst  35510      5  11SMT     GeoTIFF Data   \n",
+       "3    L3T_JET             BESSinst  35510      5  11SMT     GeoTIFF Data   \n",
+       "4    L3T_JET            MOD16inst  35510      5  11SMT     GeoTIFF Data   \n",
+       "..       ...                  ...    ...    ...    ...              ...   \n",
+       "513  L3T_JET                water  35820     12  11SMT  GeoJPEG Preview   \n",
+       "514  L3T_JET        PTJPLSMcanopy  35820     12  11SMT  GeoJPEG Preview   \n",
+       "515  L3T_JET           STICcanopy  35820     12  11SMT  GeoJPEG Preview   \n",
+       "516  L3T_JET          PTJPLSMsoil  35820     12  11SMT  GeoJPEG Preview   \n",
+       "517  L3T_JET  PTJPLSMinterception  35820     12  11SMT  GeoJPEG Preview   \n",
        "\n",
        "                                               granule  \\\n",
        "0    ECOv002_L3T_JET_35510_005_11SMT_20241010T15165...   \n",
@@ -216,10 +228,10 @@
        "516  https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
        "517  https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
        "\n",
-       "[518 rows x 8 columns]"
+       "[518 rows x 9 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
