--- a/Searching ECOSTRESS.ipynb
+++ b/Searching ECOSTRESS.ipynb
@@ -2,20 +2,238 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable Point object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 125\u001b[0m\n\u001b[1;32m    122\u001b[0m end_date \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m2024-11-11\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;66;03m# Perform search and display DataFrame\u001b[39;00m\n\u001b[0;32m--> 125\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mECOSTRESS_CMR_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconcept_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstart_date\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_date\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    126\u001b[0m df\n",
-      "Cell \u001b[0;32mIn[1], line 43\u001b[0m, in \u001b[0;36mECOSTRESS_CMR_search\u001b[0;34m(concept_id, tile, start_date, end_date)\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     30\u001b[0m \u001b[38;5;124;03mSearches the CMR API for granules matching the given parameters.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;124;03m    A pandas DataFrame with columns for orbit, scene, tile, and URL.\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     42\u001b[0m geometry \u001b[38;5;241m=\u001b[39m sentinel_tiles\u001b[38;5;241m.\u001b[39mgrid(tile)\n\u001b[0;32m---> 43\u001b[0m lon, lat \u001b[38;5;241m=\u001b[39m geometry\u001b[38;5;241m.\u001b[39mcentroid_latlon\n\u001b[1;32m     45\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://cmr.earthdata.nasa.gov/search/granules.json\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     46\u001b[0m params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconcept_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: concept_id,\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbounding_box\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlon\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlat\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlon\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m,\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mlat\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m,  \u001b[38;5;66;03m# Point search\u001b[39;00m\n\u001b[1;32m     49\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtemporal\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstart_date\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mT00:00:00Z,\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mend_date\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mT23:59:59Z\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpage_size\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m2000\u001b[39m  \u001b[38;5;66;03m# Adjust if needed\u001b[39;00m\n\u001b[1;32m     51\u001b[0m }\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot unpack non-iterable Point object"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product</th>\n",
+       "      <th>variable</th>\n",
+       "      <th>orbit</th>\n",
+       "      <th>scene</th>\n",
+       "      <th>tile</th>\n",
+       "      <th>type</th>\n",
+       "      <th>granule</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>URL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>STICinst</td>\n",
+       "      <td>35510</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>cloud</td>\n",
+       "      <td>35510</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>PTJPLSMinst</td>\n",
+       "      <td>35510</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>BESSinst</td>\n",
+       "      <td>35510</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>MOD16inst</td>\n",
+       "      <td>35510</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoTIFF Data</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>water</td>\n",
+       "      <td>35820</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>PTJPLSMcanopy</td>\n",
+       "      <td>35820</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>STICcanopy</td>\n",
+       "      <td>35820</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>PTJPLSMsoil</td>\n",
+       "      <td>35820</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>L3T_JET</td>\n",
+       "      <td>PTJPLSMinterception</td>\n",
+       "      <td>35820</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11SPS</td>\n",
+       "      <td>GeoJPEG Preview</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...</td>\n",
+       "      <td>https://data.lpdaac.earthdatacloud.nasa.gov/lp...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>148 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     product             variable  orbit  scene   tile             type  \\\n",
+       "0    L3T_JET             STICinst  35510      5  11SPS     GeoTIFF Data   \n",
+       "1    L3T_JET                cloud  35510      5  11SPS     GeoTIFF Data   \n",
+       "2    L3T_JET          PTJPLSMinst  35510      5  11SPS     GeoTIFF Data   \n",
+       "3    L3T_JET             BESSinst  35510      5  11SPS     GeoTIFF Data   \n",
+       "4    L3T_JET            MOD16inst  35510      5  11SPS     GeoTIFF Data   \n",
+       "..       ...                  ...    ...    ...    ...              ...   \n",
+       "143  L3T_JET                water  35820     12  11SPS  GeoJPEG Preview   \n",
+       "144  L3T_JET        PTJPLSMcanopy  35820     12  11SPS  GeoJPEG Preview   \n",
+       "145  L3T_JET           STICcanopy  35820     12  11SPS  GeoJPEG Preview   \n",
+       "146  L3T_JET          PTJPLSMsoil  35820     12  11SPS  GeoJPEG Preview   \n",
+       "147  L3T_JET  PTJPLSMinterception  35820     12  11SPS  GeoJPEG Preview   \n",
+       "\n",
+       "                                               granule  \\\n",
+       "0    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "1    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "2    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "3    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "4    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "..                                                 ...   \n",
+       "143  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "144  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "145  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "146  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "147  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "\n",
+       "                                              filename  \\\n",
+       "0    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "1    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "2    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "3    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "4    ECOv002_L3T_JET_35510_005_11SPS_20241010T15165...   \n",
+       "..                                                 ...   \n",
+       "143  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "144  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "145  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "146  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "147  ECOv002_L3T_JET_35820_012_11SPS_20241030T15184...   \n",
+       "\n",
+       "                                                   URL  \n",
+       "0    https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "1    https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "2    https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "3    https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "4    https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "..                                                 ...  \n",
+       "143  https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "144  https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "145  https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "146  https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "147  https://data.lpdaac.earthdatacloud.nasa.gov/lp...  \n",
+       "\n",
+       "[148 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -139,13 +357,37 @@
     "concept_id = \"C2076106409-LPCLOUD\"\n",
     "# lat = 34\n",
     "# lon = -118\n",
-    "tile = \"11SMT\"\n",
+    "tile = \"11SPS\"\n",
     "start_date = \"2024-10-10\"\n",
     "end_date = \"2024-11-11\"\n",
     "\n",
     "# Perform search and display DataFrame\n",
     "df = ECOSTRESS_CMR_search(concept_id, tile, start_date, end_date)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ECOv002_L3T_JET_35510_005_11SPS_20241010T151659_0713_01',\n",
+       "       'ECOv002_L3T_JET_35530_006_11SPS_20241011T223749_0713_01',\n",
+       "       'ECOv002_L3T_JET_35698_014_11SPS_20241022T183627_0713_01',\n",
+       "       'ECOv002_L3T_JET_35820_012_11SPS_20241030T151848_0713_01'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.granule.unique()"
    ]
   },
   {
