using `ECOv002-granules` package

--- a/ECOSTRESS Granule Download.ipynb
+++ b/ECOSTRESS Granule Download.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exit_code = L2T_STARS(runconfig_filename=runconfig_filename)\n",
+    "exit_code = L2T_STARS(runconfig_filename=runconfig_filename, use_VNP43NRT=False)\n",
     "exit_code"
    ]
   },
